--- a/web/index.html
+++ b/web/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
+    
+    <title>Bolão do Rubim</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="h-screen bg-gradient-to-t from-slate-900 via-slate-500 to-indigo-200 bg-fixed">
+    <div id="root" class=""></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
