--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
     
-    <title>Bolão do Rubim</title>
+    <title>BetBim</title>
   </head>
   <body class="h-screen bg-gradient-to-t from-slate-900 via-slate-500 to-indigo-200 bg-fixed">
     <div id="root" class=""></div>
