--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -9,9 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
     
+    <link rel="icon" href="./src/assets/logo-16x16.png" type="image/png" sizes="16x16" />
+    <link rel="icon" href="./src/assets/logo-32x32.png" type="image/png" sizes="32x32" />
+    <link rel="icon" href="./src/assets/logo-48x48.png" type="image/png" sizes="48x48" />
+    <link rel="icon" href="./src/assets/logo-64x64.png" type="image/png" sizes="64x64" />
+    <link rel="icon" href="./src/assets/logo-128x128.png" type="image/png" sizes="128x128" />
+    <link rel="icon" href="./src/assets/logo.png" type="image/png" sizes="128x128" />
     <title>BetBim</title>
   </head>
-  <body class="h-screen bg-gradient-to-t from-slate-900 via-slate-500 to-indigo-200 bg-fixed">
+  <body class="h-screen bg-gray-700 bg-fixed">
     <div id="root" class=""></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
